# ai-sidekick

./: .gitignore  Dockerfile  app.py  dev.env.dist  pyproject.toml  test.txt
sandbox/api_from_ai/: db.sqlite3  manage.py
sandbox/api_from_ai/api_from_ai/: asgi.py  settings.py  urls.py  views.py  wsgi.py
sandbox/api_from_ai/v1/: models.py  urls.py  views_backup.py
sandbox/api_from_ai/v1/migrations/: 0001_initial.py
tools/: FileManagement.py  folderTools.py  replTool.py  runShellCommand.py  sendHtmlMail.py  validate_required_keys.py  webSearchTool.py  wikiWrapperTool.py
